# skip_the_runback_rs

./: .gitignore  Cargo.toml  README.md  mono.md
.github/workflows/: release.yml
example_configs/: skip_runback_plugin_SEKIRO.json
skip_hid_proxy/: Cargo.toml  build.rs
skip_hid_proxy/src/: lib.rs
skip_rs/: Cargo.toml
skip_rs/src/: app.rs  config.rs  lib.rs  utils.rs  waypoints.rs
skip_rs/src/plugins/: ai_limit.rs  generic.rs  lop.rs  macros.rs  mod.rs  nioh2.rs  sekiro.rs  wolong.rs
