[workspace]
resolver = "2"
members = ["skip_*"]
default-members = ["skip_hid_proxy"]

[workspace.dependencies]
forward-dll = "0.1.11"
rust_hooking_utils = {git = "https://github.com/Hirtol/rust_hooking_utils", default-features=false, features = ["patching"]}
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader"]}