[package]
name = "skip_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
simplelog = "0.12"
eyre = "0.6.12"
once_cell = "1.18"

retour = { version = "0.4.0-alpha.2", features = ["static-detour"] }
frida-gum = { version = "0.13.4", features = ["auto-download", "event-sink", "invocation-listener"] }

rust_hooking_utils.workspace = true

windows = { workspace = true, features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Performance", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_Performance", "Win32_System_SystemInformation"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"